--- a/src/Style.css
+++ b/src/Style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Signika Negative', sans-serif;
   padding: 0;
   margin: 0;
   background-color: #f5f5f5;
@@ -7,6 +10,64 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: gray;
+  background : url("../src/Images/uibackground.jpg") center no-repeat;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+.header {
+  background: linear-gradient(-45deg, #85bfef,  #7e2f22, #3f3a26, #dadfe5);
+  background-size: 800% 800%;
+  animation: gradient 10s ease infinite;
+  text-align: center;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  font-family: 'Pacifico', cursive;
+  font-size: 45px;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  opacity: 0.85;
+  line-height: 1.5 !important;
+  font-weight: 600;
+  margin-top: unset;
+  margin-bottom: unset;
+}
+
+@keyframes gradient {
+  0% {
+      background-position:0% 70%
+  }
+  50% {
+    background-position:100% 30%
+  }
+  100% {
+    background-position:0% 70%
+  }
+}
+
+.add-close {
+  position: relative;
+  overflow: hidden;
+  background: rgba(255, 255, 255, 0.19);
+  color: #534e3b;
+  border: none;
+  width: 32px;
+  height: 32px;
+  -moz-transition: color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out;
+  -webkit-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+  border-radius: 100%;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  cursor: pointer;
+}
+
+.add-close:hover{
+  background: rgba(255, 255, 255, 0.34);
 }
 
 .modal-wrapper {
@@ -14,6 +75,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+ 
 }
 .modal-container {
   width: 320px;
@@ -21,20 +83,38 @@ body {
   color: #000;
   border-radius: 20px;
   padding: 30px 30px 70px;
+  color: #fff;
+  margin: 40px auto;
+  background-color: rgba(255,255,255,0.06);
+  border: 1px solid rgba(255,255,255,0.1);
+  width: 100%;
+  border-radius: 15px;
+  padding: 32px;
+  backdrop-filter: blur(10px);
+  
 }
 
 .modal-button {
-  width: 50px;
   align-self: flex-end;
-  background-color: transparent;
   border: none;
-  margin-bottom: 10px;
+}
+
+.goal-actions svg{
+  fill: #2e3218;
+}
+.goal-actions svg:hover{
+  color: red;
 }
 
 input,
-label {
+label,
+select {
   display: block;
   left: auto;
+  outline: none;
+  margin-top: 15px;
+  max-height: 200px;
+  border-radius: 20px;
 }
 
 input,
@@ -42,6 +122,152 @@ select {
   width: 100%;
 }
 
+input:focus, textarea:focus, select:focus{
+  outline: none;
+}
+
 label {
   text-align: start;
+}
+
+select {
+  padding: 15px 10px;
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-transform: uppercase;
+  appearance: none;
+  position: relative;
+ /** box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; **/
+  background: transparent;
+  /**backdrop-filter: blur(5px); **/
+  cursor: pointer;
+  color: white;
+  outline:none;
+  font-family: 'Signika Negative', sans-serif;
+  background: rgba(255, 255, 255, 0.19);
+  box-shadow:rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset, rgba(255, 255, 255, 0.14) 0px 30px 60px -12px inset ;
+ backdrop-filter: blur(2px);
+ border: none;
+ margin-left: auto;
+ margin-bottom: 4%;
+ width: 22%;
+}
+
+option{
+  background: transparent;
+  backdrop-filter: blur(5px);
+  color: black;
+}
+
+.modal-wrapper input{
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  resize: both;
+  min-height: 40px;
+  line-height: 20px;
+  color: #fff;
+	background-color: transparent;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #6f715e;
+}
+
+.action-buttons{
+  display: block;
+  margin-top: 14%;
+  padding: 5px;
+}
+
+.action-buttons button{
+  display: inline-block;
+  border: 0;
+  text-decoration: none;
+  margin: 4px 13px;
+  padding: 4px;
+  border-radius: 15px;
+  background-color: rgba(255,255,255,0.1);
+  border: 1px solid rgba(255,255,255,0.1);
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  color: rgba(255,255,255,0.8);
+  font-size: 14px;
+  letter-spacing: 2px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.list-container {
+  background: rgba(255, 255, 255, 0.14);
+  padding: 24px;
+  backdrop-filter: blur(2px);
+  border-radius: 20px;
+}
+.goal-row {
+  display: flex;
+  flex-direction: row;
+  background:rgba(255, 255, 255, 0.19);
+  margin: 0.2em;
+  padding: 0.2em;
+  border-radius: 7px;
+}
+
+.button svg{
+  margin-left: 496px;
+} 
+
+
+.goal-actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 0.7em;
+}
+
+.goal-actions svg:hover {
+  cursor: pointer;
+}
+
+.goal-content {
+  width: 100%;
+}
+
+.goal-content small {
+  float: right;
+  font-style: italic;
+}
+
+.goal-striked .goal-content {
+  text-decoration:line-through;
+  font-style: italic;
+  color: rgb(68, 68, 68);
+}
+
+@media only screen and (max-width: 600px) {
+  .header{
+    font-size: 23px;
+  }
+  .list-container{
+    margin: 0px 40px;
+    padding: 10px 19px;
+  }
+
+  .goal-row{
+    padding: 0px 30px;
+    margin: -3px 0px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .header{
+    font-weight: 23px 40px;
+    text-align: center;
+  }
+
+  .list-container{
+    margin: 20px 40px;
+    padding: 10px 30px;
+  }
 }
