--- a/src/Style.css
+++ b/src/Style.css
@@ -266,6 +266,53 @@ option {
   font-size: 20px;
 }
 
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+
+img {
+  height: 100px;
+}
+
+h1 {
+  color: #6c7ac9;
+}
+
+ul[role=navigation] {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  cursor: pointer;
+}
+
+ul[role=navigation] li {
+  padding: 2px;
+  border-radius: 5px;
+  border: 1px solid #6c7ac9;
+  color: #6c7ac9;
+}
+
+ul[role=navigation] a {
+  font-weight: bold;
+}
+
+ul[role=navigation] a {
+  color: #fff;
+  background: transparent;
+}
+
+.selected a {
+  color: #fff;
+  background: #6c7ac9;
+}
+
+ul[role=navigation] disabled a {
+  color: rgb(198, 197, 202);
+  border: 1px solid rgb(198, 197, 202);
+}
+
+
 @media only screen and (max-width: 600px) {
   .header {
     font-size: 30px;
